; ModuleID = '/home/carl/AnghaBench/oss-fuzz/projects/bzip2/extr_bzip2_decompress_target.c_LLVMFuzzerTestOneInput.c'
source_filename = "/home/carl/AnghaBench/oss-fuzz/projects/bzip2/extr_bzip2_decompress_target.c_LLVMFuzzerTestOneInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BZ_OK = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LLVMFuzzerTestOneInput(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %10 = load i64, i64* %4, align 8
  %11 = mul i64 %10, 2
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i8* @malloc(i32 %13)
  store i8* %14, i8** %9, align 8
  %15 = load i64, i64* %4, align 8
  %16 = urem i64 %15, 2
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %6, align 4
  %18 = load i8*, i8** %9, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = bitcast i32* %19 to i8*
  %21 = load i64, i64* %4, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @BZ2_bzBuffToBuffDecompress(i8* %18, i32* %8, i8* %20, i64 %21, i32 %22, i32 0)
  store i32 %23, i32* %5, align 4
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* @BZ_OK, align 4
  %26 = icmp ne i32 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %2
  br label %28

28:                                               ; preds = %27, %2
  %29 = load i8*, i8** %9, align 8
  %30 = call i32 @free(i8* %29)
  ret i32 0
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @BZ2_bzBuffToBuffDecompress(i8*, i32*, i8*, i64, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
